--- a/client/Game/packages.config
+++ b/client/Game/packages.config
@@ -1,5 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EngineIoClientDotNet" version="1.0.2-beta1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net48" />
   <package id="NUnit" version="3.12.0" targetFramework="net48" />
+  <package id="SocketIoClientDotNet" version="1.0.2-beta1" targetFramework="net48" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.12" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net48" />
+  <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net48" />
+  <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net48" />
+  <package id="System.Net.Security" version="4.3.0" targetFramework="net48" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net48" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="WebSocket4Net" version="0.15.0-beta9" targetFramework="net48" />
 </packages>
