--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -139,11 +139,9 @@
     <ItemGroup>
         <Compile Include="App.cs" />
         <Compile Include="Globals.cs" />
-        <Compile Include="Network\NetworkData.cs" />
-        <Compile Include="Network\NetworkManager.cs" />
-        <Compile Include="Network\NetworkPlayer.cs" />
         <Compile Include="Player.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="UI\MouseHotspot.cs" />
         <Compile Include="Utils\Debug.cs" />
         <Compile Include="Utils\MathUtils.cs" />
         <Compile Include="Utils\Rand.cs" />
