--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -142,9 +142,11 @@
         <Compile Include="Player.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="UI\Button.cs" />
+        <Compile Include="UI\Label.cs" />
         <Compile Include="UI\SpriteButton.cs" />
         <Compile Include="UI\SpriteTextField.cs" />
         <Compile Include="UI\Styles\ButtonStyle.cs" />
+        <Compile Include="UI\Styles\LabelStyle.cs" />
         <Compile Include="UI\Styles\TextFieldStyle.cs" />
         <Compile Include="UI\TextField.cs" />
         <Compile Include="Utils\Debug.cs" />
