--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -139,6 +139,7 @@
     <ItemGroup>
         <Compile Include="App.cs" />
         <Compile Include="Globals.cs" />
+        <Compile Include="NetworkManager.cs" />
         <Compile Include="Player.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="UI\Button.cs" />
