--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -137,11 +137,17 @@
         </ProjectReference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="AnimatedSprite.cs" />
         <Compile Include="App.cs" />
         <Compile Include="Globals.cs" />
         <Compile Include="NetworkManager.cs" />
-        <Compile Include="Player.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Scenes\HomeScene.cs" />
+        <Compile Include="Scenes\LoadingScene.cs" />
+        <Compile Include="Scenes\LoginScene.cs" />
+        <Compile Include="Scenes\Scene.cs" />
+        <Compile Include="Scenes\SceneManager.cs" />
+        <Compile Include="Scenes\Test.cs" />
         <Compile Include="UI\Button.cs" />
         <Compile Include="UI\Label.cs" />
         <Compile Include="UI\SpriteButton.cs" />
