--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -140,6 +140,7 @@
         <Compile Include="AnimatedSprite.cs" />
         <Compile Include="App.cs" />
         <Compile Include="Globals.cs" />
+        <Compile Include="MouseCursor.cs" />
         <Compile Include="NetworkManager.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Scenes\HomeScene.cs" />
@@ -149,16 +150,19 @@
         <Compile Include="Scenes\SceneManager.cs" />
         <Compile Include="Scenes\Test.cs" />
         <Compile Include="UI\Button.cs" />
+        <Compile Include="UI\Checkbox.cs" />
+        <Compile Include="UI\Image.cs" />
         <Compile Include="UI\Label.cs" />
         <Compile Include="UI\SpriteButton.cs" />
         <Compile Include="UI\SpriteTextField.cs" />
         <Compile Include="UI\Styles\ButtonStyle.cs" />
+        <Compile Include="UI\Styles\CheckboxStyle.cs" />
         <Compile Include="UI\Styles\LabelStyle.cs" />
         <Compile Include="UI\Styles\TextFieldStyle.cs" />
         <Compile Include="UI\TextField.cs" />
         <Compile Include="Utils\Debug.cs" />
         <Compile Include="Utils\FontLoader.cs" />
-        <Compile Include="Utils\MathUtils.cs" />
+        <Compile Include="Utils\Utils.cs" />
         <Compile Include="Utils\Rand.cs" />
     </ItemGroup>
     <ItemGroup>
