--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -141,15 +141,17 @@
         <Compile Include="App.cs" />
         <Compile Include="Globals.cs" />
         <Compile Include="MouseCursor.cs" />
-        <Compile Include="NetworkManager.cs" />
+        <Compile Include="Network\NetworkManager.cs" />
+        <Compile Include="Network\NetworkPlayer.cs" />
+        <Compile Include="Network\NetworkRoom.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Scenes\HomeScene.cs" />
         <Compile Include="Scenes\LoadingScene.cs" />
         <Compile Include="Scenes\LoginScene.cs" />
+        <Compile Include="Scenes\MapScene.cs" />
         <Compile Include="Scenes\Scene.cs" />
         <Compile Include="Scenes\SceneManager.cs" />
         <Compile Include="Scenes\Test.cs" />
-        <Compile Include="UIFactory.cs" />
         <Compile Include="UI\Button.cs" />
         <Compile Include="UI\Checkbox.cs" />
         <Compile Include="UI\Image.cs" />
@@ -161,6 +163,7 @@
         <Compile Include="UI\Styles\LabelStyle.cs" />
         <Compile Include="UI\Styles\TextFieldStyle.cs" />
         <Compile Include="UI\TextField.cs" />
+        <Compile Include="UI\UIFactory.cs" />
         <Compile Include="Utils\Debug.cs" />
         <Compile Include="Utils\FontLoader.cs" />
         <Compile Include="Utils\Utils.cs" />
