--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -10,7 +10,7 @@
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>game</RootNamespace>
-        <AssemblyName>Game</AssemblyName>
+        <AssemblyName>BarHUB</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
@@ -141,6 +141,7 @@
         <Compile Include="App.cs" />
         <Compile Include="Globals.cs" />
         <Compile Include="MouseCursor.cs" />
+        <Compile Include="Network\ChatMessage.cs" />
         <Compile Include="Network\NetworkManager.cs" />
         <Compile Include="Network\NetworkPlayer.cs" />
         <Compile Include="Network\NetworkRoom.cs" />
@@ -152,8 +153,10 @@
         <Compile Include="Scenes\Scene.cs" />
         <Compile Include="Scenes\SceneManager.cs" />
         <Compile Include="Scenes\Test.cs" />
+        <Compile Include="Scenes\TestChatScene.cs" />
         <Compile Include="UI\Button.cs" />
         <Compile Include="UI\Checkbox.cs" />
+        <Compile Include="UI\Custom\ChatElement.cs" />
         <Compile Include="UI\Image.cs" />
         <Compile Include="UI\Label.cs" />
         <Compile Include="UI\SpriteButton.cs" />
@@ -200,7 +203,7 @@
     </Target>
     
     <Target Name="AfterBuild">
-        <Exec ContinueOnError="true" Command="ROBOCOPY &quot;$(TargetDir) &quot; &quot;$(TargetDir)lib\ &quot; /XF *.exe *.config *.manifest GXPEngine.dll GXPEngine.pdb Game.pdb /XD lib logs data /E /IS /MOVE"> 
+        <Exec ContinueOnError="true" Command="ROBOCOPY &quot;$(TargetDir) &quot; &quot;$(TargetDir)lib\ &quot; /XF *.exe *.config *.manifest *.sh *.bat GXPEngine.dll GXPEngine.pdb BarHUB.pdb /XD lib logs data /E /IS /MOVE"> 
             <Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
         </Exec>
         <Error Condition="$(ErrorCode) &gt; 8" Message="Robocopy failed" />
