--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -145,8 +145,9 @@
         <Compile Include="Network\NetworkManager.cs" />
         <Compile Include="Network\NetworkPlayer.cs" />
         <Compile Include="Network\NetworkRoom.cs" />
+        <Compile Include="Network\NetworkVotingSession.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="Scenes\HomeScene.cs" />
+        <Compile Include="Scenes\MenuScene.cs" />
         <Compile Include="Scenes\LoadingScene.cs" />
         <Compile Include="Scenes\LoginScene.cs" />
         <Compile Include="Scenes\MapScene.cs" />
@@ -179,6 +180,9 @@
     <ItemGroup>
         <None Include="App.config" />
         <None Include="packages.config" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="data\sprites\locations\rocks" />
     </ItemGroup>
 
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
