--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -147,7 +147,8 @@
         <Compile Include="Network\NetworkRoom.cs" />
         <Compile Include="Network\NetworkVotingSession.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="Scenes\MenuScene.cs" />
+        <Compile Include="Scenes\CoffeeMenuScene.cs" />
+        <Compile Include="Scenes\FelliniMenuScene.cs" />
         <Compile Include="Scenes\LoadingScene.cs" />
         <Compile Include="Scenes\LoginScene.cs" />
         <Compile Include="Scenes\MapScene.cs" />
