--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -147,15 +147,18 @@
         <Compile Include="Network\NetworkRoom.cs" />
         <Compile Include="Network\NetworkVotingSession.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Scenes\CoffeeBarScene.cs" />
         <Compile Include="Scenes\CoffeeMenuScene.cs" />
+        <Compile Include="Scenes\FelliniBarScene.cs" />
         <Compile Include="Scenes\FelliniMenuScene.cs" />
         <Compile Include="Scenes\LoadingScene.cs" />
         <Compile Include="Scenes\LoginScene.cs" />
         <Compile Include="Scenes\MapScene.cs" />
+        <Compile Include="Scenes\RocksBarScene.cs" />
+        <Compile Include="Scenes\RocksMenuScene.cs" />
         <Compile Include="Scenes\Scene.cs" />
         <Compile Include="Scenes\SceneManager.cs" />
         <Compile Include="Scenes\Test.cs" />
-        <Compile Include="Scenes\TestChatScene.cs" />
         <Compile Include="UI\Button.cs" />
         <Compile Include="UI\Checkbox.cs" />
         <Compile Include="UI\Custom\ChatElement.cs" />
@@ -181,9 +184,6 @@
     <ItemGroup>
         <None Include="App.config" />
         <None Include="packages.config" />
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="data\sprites\locations\rocks" />
     </ItemGroup>
 
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
