--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -178,6 +178,7 @@
         <Compile Include="Utils\Debug.cs" />
         <Compile Include="Utils\Extensions.cs" />
         <Compile Include="Utils\FontLoader.cs" />
+        <Compile Include="Utils\SoundManager.cs" />
         <Compile Include="Utils\Utils.cs" />
         <Compile Include="Utils\Rand.cs" />
     </ItemGroup>
