--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -140,9 +140,11 @@
         <Compile Include="AnimatedSprite.cs" />
         <Compile Include="App.cs" />
         <Compile Include="Globals.cs" />
+        <Compile Include="Managers\NetworkManager.cs" />
+        <Compile Include="Managers\SceneManager.cs" />
+        <Compile Include="Managers\SoundManager.cs" />
         <Compile Include="MouseCursor.cs" />
         <Compile Include="Network\ChatMessage.cs" />
-        <Compile Include="Network\NetworkManager.cs" />
         <Compile Include="Network\NetworkMostLikelyTo.cs" />
         <Compile Include="Network\NetworkPlayer.cs" />
         <Compile Include="Network\NetworkRoom.cs" />
@@ -158,7 +160,6 @@
         <Compile Include="Scenes\RocksBarScene.cs" />
         <Compile Include="Scenes\RocksMenuScene.cs" />
         <Compile Include="Scenes\Scene.cs" />
-        <Compile Include="Scenes\SceneManager.cs" />
         <Compile Include="Scenes\Test.cs" />
         <Compile Include="UI\Button.cs" />
         <Compile Include="UI\Checkbox.cs" />
@@ -180,7 +181,6 @@
         <Compile Include="Utils\Debug.cs" />
         <Compile Include="Utils\Extensions.cs" />
         <Compile Include="Utils\FontLoader.cs" />
-        <Compile Include="Utils\SoundManager.cs" />
         <Compile Include="Utils\Utils.cs" />
         <Compile Include="Utils\Rand.cs" />
     </ItemGroup>
