--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -148,6 +148,7 @@
         <Compile Include="Network\NetworkMostLikelyTo.cs" />
         <Compile Include="Network\NetworkPlayer.cs" />
         <Compile Include="Network\NetworkRoom.cs" />
+        <Compile Include="Network\NetworkWouldYouRather.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Scenes\CoffeeBarScene.cs" />
         <Compile Include="Scenes\CoffeeMenuScene.cs" />
@@ -166,6 +167,7 @@
         <Compile Include="UI\Custom\ChatElement.cs" />
         <Compile Include="UI\Custom\JukeboxElement.cs" />
         <Compile Include="UI\Custom\Minigame1Element.cs" />
+        <Compile Include="UI\Custom\Minigame2Element.cs" />
         <Compile Include="UI\Custom\PlayerAvatarElement.cs" />
         <Compile Include="UI\Custom\RectangleElement.cs" />
         <Compile Include="UI\Image.cs" />
