Fix bugs we found while testing

--- a/client/Game/Game.csproj
+++ b/client/Game/Game.csproj
@@ -163,6 +163,7 @@
         <Compile Include="Scenes\RocksMenuScene.cs" />
         <Compile Include="Scenes\Scene.cs" />
         <Compile Include="Scenes\Test.cs" />
+        <Compile Include="Sprite.cs" />
         <Compile Include="UI\Button.cs" />
         <Compile Include="UI\Checkbox.cs" />
         <Compile Include="UI\Custom\ChatElement.cs" />
